# ClinicaHire

./: Dockerfile  Makefile  README.md  compose-local.yml  pyproject.toml
.github/workflows/: ruff.yml
app/: container.py
app/api/: api_handler.py  events_router.py  feedbacks_router.py  registrations_router.py
app/auth/: attendee_access_controller.py  auth_router.py  auth_service.py  oauth_service.py  organizer_access_controller.py
app/constants/: admin.py  degree.py  exceptions.py  user_languages.py  user_roles.py
app/core/: events_service.py  feedbacks_service.py  registrations_service.py  users_service.py
app/database/: db.py
app/database/models/: education.py  event.py  experience.py  language.py  role.py  user.py
app/database/repositories/: events_repository.py  feedbacks_repository.py  registrations_repository.py  users_repository.py
app/notifications/: sms_service.py
app/schemas/: event_schema.py  feedback_schema.py  registration_schema.py  user_schema.py
app/services/: config_service.py
app/utils/: filter_service.py  jwt_service.py  query_builder.py
clinical_hire/: manage.py
clinical_hire/clinical_hire/: asgi.py  settings.py  urls.py  wsgi.py
clinical_hire/users/: admin.py  models.py
